@@ -9,24 +9,22 @@ import org.mapstruct.Mapping;
 import org.mapstruct.factory.Mappers;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper
 public interface CartMapper {
     CartMapper INSTANCE = Mappers.getMapper(CartMapper.class);
-
     // Cart nesnesini GetCartResponse nesnesine dönüştüren metot
     @Mapping(source = "customer.id", target = "customerId")
     @Mapping(source = "items", target = "cartItems")
     GetCartResponse cartToGetCartResponse(Cart cart);
-    @Mapping(source = "customer.id", target = "customerId")
-    @Mapping(source = "items", target = "cartItems")
-    UpdateCartResponse cartToUpdateCartResponse(Cart cart);
+
     AddProductToCartResponse toAddProductToCartResponse(Cart cart);
+
     @Mapping(source = "product.id", target = "productId")
     @Mapping(source = "product.name", target = "productName")
     @Mapping(source = "product.price", target = "productPrice")
     CartItemDto toCartItemDto(CartItem cartItem);
+
     List<CartItemDto> toCartItemDtoList(List<CartItem> cartItems);
 
     // CartItem nesnesini GetCartItemResponse nesnesine dönüştüren metot
@@ -40,7 +38,8 @@ public interface CartMapper {
     default List<GetCartItemResponse> mapCartItems(List<CartItem> cartItems) {
         return cartItems.stream()
                 .map(this::cartItemToGetCartItemResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
+
     RemoveProductFromCartResponse toRemoveProductFromCartResponse(Cart cart);
 }
